# unique-words

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  FileReader.cpp  FileReader.h  StringSplitter.cpp  StringSplitter.h  ThreadPool.h
test/: CMakeLists.txt  FileReader_unittest.cpp  StringSplitter_unittest.cpp
